objects/LLC_BI__Product_Type__c.object
<CustomObject>
    <description>The Product Type Object is used to to track Product Types,  which is the middle level in the Product Hierarchy</description>
    <fields>
        <fullName>LLC_BI__Booked__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is populated automatically whenever a child product state config record is created with &quot;LLC_BI__Booked__c&quot; enabled. This field links to a Product State Config Pivot record which specifies all &quot;states&quot; (stage and status) that are considered &quot;Booked&quot; for this product type in the system.</description>
        <label>Product State Config Booked</label>
        <referenceTo>LLC_BI__Product_State_Config_Pivot__c</referenceTo>
        <relationshipLabel>Product Types Booked</relationshipLabel>
        <relationshipName>Product_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Category__c</fullName>
        <description>This field is optional, but required for deposit product types. It is manually populated. This field is used to specify the type of account that this product type relates to.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Certificate of Deposit</fullName>
                </value>
                <value>
                    <fullName>CESA</fullName>
                </value>
                <value>
                    <fullName>HSA</fullName>
                </value>
                <value>
                    <fullName>IRA</fullName>
                </value>
                <value>
                    <fullName>Money Market</fullName>
                </value>
                <value>
                    <fullName>HELOC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Closed__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is populated automatically whenever a child product state config record is created with &quot;LLC_BI__Closed__c&quot; enabled. This field links to a Product State Config Pivot record which specifies all &quot;states&quot; (stage and status) that are considered &quot;Closed&quot; for this product type in the system.</description>
        <label>Product State Config Closed</label>
        <referenceTo>LLC_BI__Product_State_Config_Pivot__c</referenceTo>
        <relationshipLabel>Product Types Closed</relationshipLabel>
        <relationshipName>Product_Types_Closed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collapsed_Offer_Card_Field_Set__c</fullName>
        <description>The user populates this text field to specify the field set that appears in the collapsed offer cards for this product type.</description>
        <inlineHelpText>Enter the name of the field set with all necessary fields that appear in the collapsed offer card for this product type.</inlineHelpText>
        <label>Collapsed Offer Card Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Default_App__c</fullName>
        <description>This field houses a default app value for product types if a product doesn&apos;t have an associated app (group/route combination for navigation).</description>
        <label>Default App</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Default_Collateral_Type__c</fullName>
        <description>Defines the default collateral type for this product type record.</description>
        <inlineHelpText>Pick the value of the desired default collateral type.</inlineHelpText>
        <label>Default Collateral Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Excluded__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is populated automatically whenever a child product state config record is created with &quot;LLC_BI__Is_Excluded_From_Stage_Duration__c&quot; enabled. This field links to a Product State Config Pivot record which specifies all &quot;states&quot; (stage and status) that are considered Excluded for this product type in the system. It is used to specify stages that are should be eclused from stage duration in the system.</description>
        <label>Product State Config Excluded</label>
        <referenceTo>LLC_BI__Product_State_Config_Pivot__c</referenceTo>
        <relationshipLabel>Product State Config Excluded</relationshipLabel>
        <relationshipName>Product_Types_Excluded</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Expanded_Offer_Card_Field_Set__c</fullName>
        <description>The user populates this text field to specify the field set that appears in the expanded offer cards for this product type.</description>
        <inlineHelpText>Enter the name of the field set with all necessary fields that appear in the expanded offer card for this product type.</inlineHelpText>
        <label>Expanded Offer Card Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Accrual_Method__c</fullName>
        <description>This field is manually selected. This field sets the interest accrual methodology for determining the amount of interest owed per period. It is used for Rate &amp; Payment streams.</description>
        <label>Interest Accrual Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30_360</fullName>
                </value>
                <value>
                    <fullName>Actual_360</fullName>
                </value>
                <value>
                    <fullName>Actual_365</fullName>
                </value>
                <value>
                    <fullName>Actual_Actual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Deposit__c</fullName>
        <description>This field is automatically set. This checkbox field is selected if the product object field on the parent product line is set to deposit.</description>
        <formula>CONTAINS(TEXT(LLC_BI__Product_Line__r.LLC_BI__Product_Object__c), &quot;Deposit__c&quot;)</formula>
        <label>Is Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Loan__c</fullName>
        <description>This field is automatically set. This checkbox field is selected if the product object field on the parent product line is set to Loan.</description>
        <formula>CONTAINS(TEXT(LLC_BI__Product_Line__r.LLC_BI__Product_Object__c), &quot;Loan__c&quot;)</formula>
        <label>Is Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Mortgage_Insurance_Estimate_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators populate this checkbox to indicate a loan requires mortgage insurance estimation.</description>
        <inlineHelpText>Select this checkbox to indicate the loan requires mortgage insurance estimation.</inlineHelpText>
        <label>Is Mortgage Insurance Estimate Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Information_Field_Set__c</fullName>
        <description>Manually populate this text field with the name of a field set that contains the input fields that should appear on a product type. This allows for the dynamic display of the loan information input fields.</description>
        <inlineHelpText>Enter the name of a field set that maps to this product type.</inlineHelpText>
        <label>Loan Information Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maintenance_App__c</fullName>
        <description>This field automatically populates via the treasury maintenance configuration. It associates converted treasury services to product-specific maintenance actions. This field corresponds to the unique app name on the route object to control what is displayed to users. Default is null.</description>
        <label>Maintenance App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Offer_Fieldset__c</fullName>
        <description>Manually populate this text field with the name of a field set that contains the fields that should appear on an offer. When the terms of the product are updated, the populated fields allow for the dynamic display of offers.</description>
        <inlineHelpText>Manually populate this text field with the name of a field set that contains the fields that should appear on an offer. When the terms of the product are updated, the populated fields allow for the dynamic display of offers.</inlineHelpText>
        <label>Offer Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Count__c</fullName>
        <description>This field is calculated via a roll-up. This is the number of Products related to the Product Type.</description>
        <inlineHelpText>The number of Products related to the Product Type.</inlineHelpText>
        <label>Product Count</label>
        <summaryForeignKey>LLC_BI__Product__c.LLC_BI__Product_Type__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Line__c</fullName>
        <description>This field is automatically populated when creating a product type from a product line, otherwise it is manually populated. This field is used to lookup to Product Line to associate with the Product Type.</description>
        <label>Product Line</label>
        <referenceTo>LLC_BI__Product_Line__c</referenceTo>
        <relationshipLabel>Product Types</relationshipLabel>
        <relationshipName>Product_Types</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_State_Booked_Config_Count__c</fullName>
        <description>This field is populated automatically. It is a Roll Up Summary used to calculate how many Product State Configs have &quot;LLC_BI__Booked__c&quot; checked. This value is limited to 10, as that is the number of &quot;states&quot; that can be recorded in the LLC_BI__Product_State_Config_Pivot__c table.</description>
        <label>Product State Booked Config Count</label>
        <summaryFilterItems>
            <field>LLC_BI__Product_State_Config__c.LLC_BI__Is_Booked__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Product_State_Config__c.LLC_BI__Product_Type__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_State_Closed_Config_Count__c</fullName>
        <description>This field is populated automatically. It is a Roll Up Summary used to calculate how many Product State Configs have &quot;LLC_BI__Closed__c&quot; selected. This value is limited to 10, as that is the number of &quot;states&quot; that can be recorded in the LLC_BI__Product_State_Config_Pivot__c table.</description>
        <label>Product State Closed Config Count</label>
        <summaryFilterItems>
            <field>LLC_BI__Product_State_Config__c.LLC_BI__Is_Closed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Product_State_Config__c.LLC_BI__Product_Type__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_State_Excluded_Config_Count__c</fullName>
        <description>This field is populated automatically. It is a Roll Up Summary used to calculate how many Product State Configs have &quot;LLC_BI__Is_Excluded_From_Stage_Duration__c&quot; checked. This value is limited to 10, as that is the number of &quot;states&quot; that can be recorded in the LLC_BI__Product_State_Config_Pivot__c table.</description>
        <label>Product State Excluded Config Count</label>
        <summaryFilterItems>
            <field>LLC_BI__Product_State_Config__c.LLC_BI__Is_Excluded_From_Stage_Duration__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Product_State_Config__c.LLC_BI__Product_Type__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_State_Rdy_To_Trans_Confg_Cnt__c</fullName>
        <description>This field is populated automatically. It is a Roll Up Summary used to calculate how many Product State Configs have &quot;LLC_BI__Is_Ready_to_Transmit__c&quot; checked. This value is limited to 10, as that is the number of &quot;states&quot; that can be recorded in the LLC_BI__Product_State_Config_Pivot__c table.</description>
        <label>Product State Rdy to Transmit Config Cnt</label>
        <summaryFilterItems>
            <field>LLC_BI__Product_State_Config__c.LLC_BI__Is_Ready_To_Transmit__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Product_State_Config__c.LLC_BI__Product_Type__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ready_To_Transmit__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is populated automatically whenever a child product state config record is created with &quot;LLC_BI__Is_Ready_To_Transmit__c&quot; enabled. This field links to a Product State Config Pivot record which specifies all &quot;states&quot; (stage and status) that are considered Ready to Transmit for this product type in the system. This is used to specify stages that are considered &quot;Ready to Transmit&quot; to the CUSO.</description>
        <label>Product State Config Ready To Transmit</label>
        <referenceTo>LLC_BI__Product_State_Config_Pivot__c</referenceTo>
        <relationshipLabel>Product Types Ready To Transmit</relationshipLabel>
        <relationshipName>Product_Types_Ready_To_Transmit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Recalculate_Offers_Field_Set__c</fullName>
        <description>The user populates this text field with the field set name that contains the desired fields to be displayed in the recalculate offers component on the offers page. By default, this field set is blank.</description>
        <inlineHelpText>Manually populate this text field with the name of a field set that contains the fields that should appear in the recalculate offers component for this product type.</inlineHelpText>
        <label>Recalculate Offers Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Reference_Image__c</fullName>
        <description>The system automatically populates this image field to display the image associated with each product type. By default, the system displays either the designated product image or the default image.</description>
        <inlineHelpText>Click an image to begin the process associated with the product type.</inlineHelpText>
        <label>Reference Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Start_Production_Application__c</fullName>
        <description>Administrators populate this optional text field to define the group or route to which the system directs the user after the user selects a product type. The system only uses the app or route defined in this field on the initial creation of the new loan or product. By default, it is blank.</description>
        <inlineHelpText>When the user selects a product type, the system redirects them to the app or route name entered here.</inlineHelpText>
        <label>Start Product Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Usage_Type__c</fullName>
        <description>This field is optional. It is manually populated. This field determines the availability of its products as they relate to Doc Man and Product VF Pages.</description>
        <label>Usage Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Loan</fullName>
                    <default>true</default>
                    <label>Loan</label>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__configKey__c</fullName>
        <description>This field is automatically populated. The Config Key field is an auto-number and is used to apply a unique Name and Number to the product type allowing it to be used with the Config Key configuration.</description>
        <displayFormat>KY_PT_{00000000}</displayFormat>
        <label>Config Key</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>This Field is used to specify a unique identifier for Product Type records.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Type</label>
    <nameField>
        <label>Product Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LLC_BI__Product_State_Booked_Config_Count</fullName>
        <active>true</active>
        <errorConditionFormula>LLC_BI__Product_State_Booked_Config_Count__c &gt; 10</errorConditionFormula>
        <errorMessage>A maximum of 10 booked config records per product type is currently supported.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Product_State_Closed_Config_Count</fullName>
        <active>true</active>
        <errorConditionFormula>LLC_BI__Product_State_Closed_Config_Count__c &gt; 10</errorConditionFormula>
        <errorMessage>A maximum of 10 closed config records per product type is currently supported.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Product_State_Excluded_Config_Count</fullName>
        <active>true</active>
        <errorConditionFormula>LLC_BI__Product_State_Excluded_Config_Count__c &gt; 10</errorConditionFormula>
        <errorMessage>A maximum of 10 excluded config records per product type is currently supported.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Product_State_Rdy_To_Trans_Confg_Cnt</fullName>
        <active>true</active>
        <errorConditionFormula>LLC_BI__Product_State_Rdy_To_Trans_Confg_Cnt__c &gt; 10</errorConditionFormula>
        <errorMessage>A maximum of 10 ready to transmit config records per product type is currently supported.</errorMessage>
    </validationRules>
</CustomObject>